--- a/app/src/main/res/layout/video_row_watch.xml
+++ b/app/src/main/res/layout/video_row_watch.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -21,22 +21,19 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="100dp"
+        android:layout_marginLeft="8dp"
         android:elevation="4dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="8dp"
-        app:cardCornerRadius="10dp"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/grey_round_bg"
-           >
-
+            android:background="@drawable/grey_round_bg">
 
 
             <androidx.constraintlayout.widget.Guideline
@@ -54,9 +51,9 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:text="Spars"
-                android:lines="1"
                 android:ellipsize="end"
+                android:lines="1"
+                android:text="Spars"
                 android:textColor="@color/grey_800"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -72,6 +69,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="16dp"
                 android:text="100"
+                android:visibility="invisible"
                 android:textColor="@color/grey_700"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -82,9 +80,9 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/guideline3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/guideline3"
                 app:srcCompat="@drawable/meal" />
 
             <TextView
@@ -116,7 +114,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.10" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
